# memory-native

./: .gitignore  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: ARTICLE.md  MEMORY_NATIVE_ACCELERATION_DEEP_ITERATIONS_V2.md  MLX_PORT.md  qwen_counter_recovery_design.md  solver_v2_design.md  solver_v3_consolidated.md  solver_v3_design.md
notebooks/: MN_GLM_colab.ipynb  MN_convergence_colab.ipynb  qwen15_recovery_colab.ipynb  qwen_recovery_t4.ipynb
paper/: MEMORY_NATIVE_PREPRINT.md
results/: ACCELERATION.md  FULL_METHOD_RUN.md  FUSION_PLAN.md  GPU_KERNEL_VERIFICATION.md  GROUP_COUNTER.md  INT4_WGRAD.md  KERNEL.md  MEMORY_FFN.md  MN_GLM_1B5.md  MODEL_2026.md  MOE_FFN.md  MSTACK.md  PERF_ANATOMY.md  POOLS.md  README.md  REALDATA_SCALING.md  SATURATION_ANALYSIS.md  SCALE_1B.md  SHOOTOUT.md  SLOWFAST.md  SUMMARY.md  VERIFICATION_RESULTS.md  cuda_witness_t4.json  cuda_witness_t4.md  cuda_witness_t4_v3.json  forecast_v3f2_frozen.md  group_kernel_opt_stage01.md  perf_audit_cpu.md  qwen_inference_samples.md  qwen_recovery_cpu.md  qwen_recovery_kaggle_mixed.md  recovery_15b_main.md  recovery_15b_pilot.md  recovery_15b_v3_final.md  solver_v3_consolidated_layerwise.json  solver_v3_consolidated_layerwise.md  solver_v3_kernel_gate.md  solver_v3_review_fixes.md
scripts/: .retest.err  benchmark_group_kernels.py  build_mix_corpus.py  finetune_qwen_counter.py  fineweb_1b5_glm.py  fineweb_1b_2xt4.py  fusion_invariants.py  gpu_acceleration_bench.py  group_counter_witness.py  int4_wgrad_witness.py  layer_profiler.py  make_article_charts.py  make_saturation_charts.py  memory_ffn_witness.py  mlx_demo.py  mod_witness.py  moe_ffn_witness.py  moe_gpt_witness.py  mstack_witness.py  mtp_witness.py  realdata_scaling.py  recovery_session.py  run_colab.py  run_ptq_recovery.py  run_ptq_witness.py  run_scale_validation.sh  run_solver_v3_consolidated_layerwise.py  run_tail.py  saturation_probe.py  (+4 more)
(+107 files in other folders)
